--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -38,7 +38,7 @@ jobs:
       run: python3 setup.py sdist --formats=gztar
     - name: Install dependencies
       run: |
-        python3 -m pip install --upgrade pip virtualenv wheel setuptools
+        python3 -m pip install --upgrade pip virtualenv wheel setuptools pytest
         python3 -m pip install torch torchvision -f https://download.pytorch.org/whl/cpu/torch_stable.html
     - name: Install project
       run: python3 -m pip install -e .[dev]
@@ -57,9 +57,10 @@ jobs:
       with:
         files: dist/*
         draft: true
-    - name: Test with pytest
+    - name: Pytest
       run: |
-        python3 -m pytest --cov=sapicore --cov-report term --cov-branch sapicore/test
+        cd sapicore
+        python3 -m pytest -m "not functional"
 
   docs:
     runs-on: ubuntu-latest
@@ -71,12 +72,11 @@ jobs:
         python-version: 3.x
     - name: Install dependencies
       run: |
-        python3 -m pip install --upgrade pip virtualenv wheel setuptools
+        python3 -m pip install --upgrade pip virtualenv wheel setuptools m2r2
         python3 -m pip install torch torchvision -f https://download.pytorch.org/whl/cpu/torch_stable.html
         python3 -m pip install -e .[dev]
     - name: Generate docs
       run: |
-        cp README.rst docs/source/readme.rst
         cd docs
         make html
     - name: Upload docs as artifact
