--- a/sapicore/tests/engine/network/test_network/synapses/L3--L2.yaml
+++ b/sapicore/tests/engine/network/test_network/synapses/L3--L2.yaml
@@ -2,26 +2,26 @@ package: sapicore.engine.synapse.STDP
 class: STDPSynapse
 
 model:
-  identifier: L2->L4
+  identifier: L3--L2
 
-  source: L2
-  target: L4
+  source: L3
+  target: L2
 
   sweep:
     fixed:
-      weight_max: 150.0
-      weight_min: 0.0
+      weight_max: 0.0
+      weight_min: -100.0
       alpha_plus: 0.1
       alpha_minus: 0.1
 
     random:
       weights:
         method: uniform
-        args: [50.0, 50.0]
+        args: [-25.0, 10.0]
 
       delay_ms:
         method: uniform
-        args: [5.0, 15.0]
+        args: [2, 5.0]
 
 loggable:
   - weights
