--- a/sapicore/tests/engine/network/test_network/synapses/L2--L1.yaml
+++ b/sapicore/tests/engine/network/test_network/synapses/L2--L1.yaml
@@ -2,14 +2,14 @@ package: sapicore.engine.synapse.STDP
 class: STDPSynapse
 
 model:
-  identifier: L2->L3
+  identifier: L2--L1
 
   source: L2
-  target: L3
+  target: L1
 
   sweep:
     fixed:
-      weight_max: 50.0
+      weight_max: 150.0
       weight_min: 0.0
       alpha_plus: 0.1
       alpha_minus: 0.1
@@ -17,11 +17,11 @@ model:
     random:
       weights:
         method: uniform
-        args: [25.0, 10.0]
+        args: [50.0, 20.0]
 
       delay_ms:
         method: uniform
-        args: [2.0, 5.0]
+        args: [1.0, 3.0]
 
 loggable:
   - weights
