--- a/sapicore/tests/engine/network/test_network/synapses/L2--L2.yaml
+++ b/sapicore/tests/engine/network/test_network/synapses/L2--L2.yaml
@@ -2,7 +2,7 @@ package: sapicore.engine.synapse.STDP
 class: STDPSynapse
 
 model:
-  identifier: L2->L2
+  identifier: L2--L2
 
   source: L2
   target: L2
