--- a/sapicore/tests/engine/network/test_network/synapses/L2--L3.yaml
+++ b/sapicore/tests/engine/network/test_network/synapses/L2--L3.yaml
@@ -2,26 +2,26 @@ package: sapicore.engine.synapse.STDP
 class: STDPSynapse
 
 model:
-  identifier: L3->L2
+  identifier: L2--L3
 
-  source: L3
-  target: L2
+  source: L2
+  target: L3
 
   sweep:
     fixed:
-      weight_max: 0.0
-      weight_min: -100.0
+      weight_max: 50.0
+      weight_min: 0.0
       alpha_plus: 0.1
       alpha_minus: 0.1
 
     random:
       weights:
         method: uniform
-        args: [-25.0, 10.0]
+        args: [25.0, 10.0]
 
       delay_ms:
         method: uniform
-        args: [2, 5.0]
+        args: [2.0, 5.0]
 
 loggable:
   - weights
