--- a/sapicore/tests/engine/network/test_network/synapses/L2--L4.yaml
+++ b/sapicore/tests/engine/network/test_network/synapses/L2--L4.yaml
@@ -2,26 +2,26 @@ package: sapicore.engine.synapse.STDP
 class: STDPSynapse
 
 model:
-  identifier: L3->L3
+  identifier: L2--L4
 
-  source: L3
-  target: L3
+  source: L2
+  target: L4
 
   sweep:
     fixed:
-      weight_max: 0.0
-      weight_min: -20.0
-      alpha_plus: 0.02
-      alpha_minus: 0.02
+      weight_max: 150.0
+      weight_min: 0.0
+      alpha_plus: 0.1
+      alpha_minus: 0.1
 
     random:
       weights:
         method: uniform
-        args: [-5.0, 2.0]
+        args: [50.0, 50.0]
 
       delay_ms:
         method: uniform
-        args: [1.0, 2.0]
+        args: [5.0, 15.0]
 
 loggable:
   - weights
