--- a/sapicore/tests/engine/network/test_network/synapses/L4--L2.yaml
+++ b/sapicore/tests/engine/network/test_network/synapses/L4--L2.yaml
@@ -2,7 +2,7 @@ package: sapicore.engine.synapse.STDP
 class: STDPSynapse
 
 model:
-  identifier: L4->L2
+  identifier: L4--L2
 
   source: L4
   target: L2
