--- a/sapicore/pytest.ini
+++ b/sapicore/pytest.ini
@@ -1,4 +1,8 @@
 [pytest]
+asyncio_default_fixture_loop_scope = function
+
+filterwarnings =
+    ignore::FutureWarning
 
 testpaths =
     tests/data/
